--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,15 @@ credentials.json
 #######################
 
 # Add custom patterns below
+
+# RepoKit Private Content Protection (DO NOT REMOVE)
+**/private_*
+.env.private
+CLAUDE.md
+test_runs/
+private/temp/
+private/claude/
+private/docs/
+test-runs/
+revisions/
+private/notes/
